log
Thu Apr 30 08:18:34 PM UTC 2026: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 5/60
6eb5924
Thu Apr 30 08:34:02 PM UTC 2026: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 8/60
35de1a6
Thu Apr 30 08:38:49 PM UTC 2026: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|7
total_score: 8/60
9377557
Thu Apr 30 08:43:17 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 8/60
9f106d6
Thu Apr 30 08:44:15 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 8/60
90bc03f
Thu Apr 30 08:45:17 PM UTC 2026: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:122:25: error: expected ‘;’ before ‘}’ token
  122 |         return aux->pair
      |                         ^
      |                         ;
  123 |     }
      |     ~                    
089b5f7
Thu Apr 30 08:45:24 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 8/60
08eee93
Thu Apr 30 08:47:41 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 8/60
14a0faf
Thu Apr 30 08:49:25 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 8/60
797e7c9
Thu Apr 30 08:50:20 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 8/60
7386e51
Thu Apr 30 08:51:43 PM UTC 2026: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
fd0f832
Thu Apr 30 08:52:24 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 8/60
4fe616b
Thu Apr 30 08:57:09 PM UTC 2026: 
 treemap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  5|7
total_score: 8/60
8f87e3a
Thu Apr 30 08:57:46 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c09616b
Thu Apr 30 08:59:29 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|6
total_score: 15/60
887757d
Thu Apr 30 09:02:13 PM UTC 2026: 
 tests:  8|6
total_score: 15/60
1b348f1
Thu Apr 30 09:02:19 PM UTC 2026: 
 tests:  8|6
total_score: 15/60
6e4a5f0
Sun May  3 03:28:04 AM UTC 2026: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:52:5: error: ‘map’ undeclared (first use in this function)
   52 |     map->lower_than = lower_than;
      |     ^~~
treemap.c:52:5: note: each undeclared identifier is reported only once for each function it appears in
e9519e0
Sun May  3 03:28:20 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|5
total_score: 20/60
9354342
Sun May  3 03:44:11 AM UTC 2026: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  11|5
total_score: 20/60
d7936f0
Sun May  3 03:44:27 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|5
total_score: 20/60
35bd4f8
Sun May  3 03:52:35 AM UTC 2026: 
 treemap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  18|4
total_score: 30/60
8636793
Sun May  3 04:12:51 AM UTC 2026: 
 treemap.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:100:28: error: expected ‘;’ before ‘}’ token
  100 |             aux = aux->left
      |                            ^
      |                            ;
  101 |         }
      |         ~                   
78965c6
Sun May  3 04:13:01 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 30/60
8f42a65
Sun May  3 04:14:12 AM UTC 2026: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  19|4
total_score: 30/60
accace2
Sun May  3 04:15:09 AM UTC 2026: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  19|4
total_score: 30/60
317d7b3
Sun May  3 04:15:33 AM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  20|3
total_score: 40/60
925f5a6
Sun May  3 04:22:45 AM UTC 2026: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:130:24: error: expected ‘;’ before ‘}’ token
  130 |         aux = aux->left
      |                        ^
      |                        ;
  131 |     }
      |     ~                   
af8d101
Sun May  3 04:22:56 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 40/60
9c62f93
Mon May  4 12:59:15 AM UTC 2026: 
 treemap.c | 45 +++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 45 insertions(+)
 tests:  0|0
e9f6063
Mon May  4 01:00:00 AM UTC 2026: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
5e0cda1
